<resources>
    <string name="facebook_app_id" translatable="false">740063172851347</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb740063172851347</string>
    <string name="app_name" translatable="false">SingtoStore</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="tab_me" translatable="false">Me</string>
    <string name="yourname">Your Name</string>
    <string name="telluserlogin">Login or Register</string>
    <string name="emailhint">Email</string>
    <string name="passwordhint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="loginwithfacebook">Login with Facebook</string>
    <string name="gotoregisteraccount">Go to Register</string>
    <string name="facebooklogincancelled">Login Cancelled</string>
    <string name="userphonenumber">Phone Number</string>
    <string name="invalidemail">Invalid Email</string>
    <string name="passwordisempty">Password is Empty</string>
    <string name="passwordatleast6chars">Password should at least 6 Characters</string>
    <string name="islogin">Logging In...</string>
    <string name="isregistering">Registering</string>
    <string name="sendresetpasswordemail">Send Reset Password Email</string>
    <string name="submitting">Submitting</string>
    <string name="resetpasswordemailsended">Check your Email to Reset Password</string>
    <string name="ok">OK</string>
    <string name="yourdetails">Your Details</string>
    <string name="changeavatar">Change Profile Photo</string>
    <string name="nickname">Name</string>
    <string name="nicknamesemicolon">Name :</string>
    <string name="update">Update</string>
    <string name="updating">Updating</string>
    <string name="namecannotbeempty">Name is empty</string>
    <string name="userprofile">Profile</string>
    <string name="editusername">Edit Name</string>
    <string name="editavatar">Profile Photo</string>
    <string name="language">Language</string>
    <string name="selectlocale">Select Language</string>
    <string name="en" translatable="false">English</string>
    <string name="th" translatable="false">ไทย</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="nll" translatable="false">NULL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
