<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:paddingStart="@dimen/dp20"
    android:paddingEnd="@dimen/dp20"
    tools:context="store.singto.singtostore.loginRegister.LoginActivity">

    <ImageView
        android:layout_marginTop="@dimen/dp20"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_highlight_off_black_24dp"
        android:id="@+id/returnImgAsBtn"
        android:layout_width="@dimen/dp40"
        android:layout_height="@dimen/dp40" />

    <ImageView
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:src="@mipmap/ic_launcher_liq"
        android:layout_gravity="center_horizontal"
        android:id="@+id/applogo" />


    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userEmailEditText"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/emailhint"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/userPasswordEditText"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:hint="@string/passwordhint"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgetpasswordTextViewAsBtn"
        android:layout_gravity="right"
        android:textColor="@color/colorDarkGray"
        android:text="@string/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginWithEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"/>


    <Button
        android:layout_marginTop="@dimen/dp20"
        android:id="@+id/loginwithfacebookBtn"
        android:textColor="@color/colorWhite"
        android:background="@color/facebookblue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginwithfacebook"
        />

    <Button
        android:text="@string/gotoregisteraccount"
        android:textColor="@color/colorDarkGray"
        android:background="@null"
        android:layout_marginTop="@dimen/dp20"
        android:id="@+id/gotoregisterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
